  #388.
- Non US-ASCII characters weren't being properly handled on the
  command line. See #266.
- Quoted paths are now consistently handled correctly when passed
  on the command line. This is important, for example, when
  multiple paths are being passed in and more than one path
  contains spaces (and therefore more than one path will need to
  be enclosed in double quotes).
- Previously, if an item was cut or copied within a tab and the
  tab was closed, the clipboard data would be lost when the
  application exited. Now, the clipboard is flushed when the tab
  is closed, which ensures the data will be retained, even once
  the application has exited.
- When running the application at 150% DPI, bookmarks wouldn't
  appear on the bookmarks toolbar, if the toolbar was initially
  empty. The height of the toolbar is now updated when an item is
  added, which fixes this issue.
- If the only bookmarks that appeared in the "Bookmarks" menu
  were under the "Other Bookmarks" folder, the menu wouldn't be
  built correctly.
- Fixed an issue with handling the properties item on the
  background context menu.
- Previously, listview groups were always sorted by name. Now,
  they're sorted based on the attributes of the groups
  themselves. See #101.
- The group an item is in is now updated when the item is
  updated. See #110.
- When pressing backspace in a locked tab to navigate up, the
  navigation would occur in that tab, instead of a new tab. See
  #265.
- If a filtered item is renamed, it will now be shown again if it
  no longer needs to be filtered. Previously, the item would
  remain hidden until filtering was disabled.
- A saved dialog position will now only be used if the saved
  position is visible on screen.
- When the single-click to open option and checkbox option are
  both enabled, clicking on a checkbox would previously result in
  the associated item being opened. Now, clicking on a checkbox