@@ -122,6 +122,9 @@ Bug fixes:
   multiple paths are being passed in and more than one path
   contains spaces (and therefore more than one path will need to
   be enclosed in double quotes).
+- If a folder had an overlay icon, the icon for the folder itself
+  would fail to show up in a variety of places (e.g. in the tab
+  control, the manage bookmarks dialog, various menus).
 - Previously, if an item was cut or copied within a tab and the
   tab was closed, the clipboard data would be lost when the
   application exited. Now, the clipboard is flushed when the tab
